--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.5.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "~50.0.14",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.8",
+    "expo-av": "~14.0.5",
+    "expo-bluetooth": "^0.0.0",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-linear-gradient": "^2.8.3"
+    "react-native": "0.74.1",
+    "react-native-google-fonts": "^0.0.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-track-player": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
