--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#002D62"
     },
     "assetBundlePatterns": [
       "**/*"
