--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.5",
     "expo": "^51.0.8",
     "expo-av": "~14.0.5",
     "expo-bluetooth": "^0.0.0",
@@ -21,7 +22,9 @@
     "react-native": "0.74.1",
     "react-native-google-fonts": "^0.0.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-track-player": "^4.1.1"
+    "react-native-track-player": "^4.1.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
