--- a/package.json
+++ b/package.json
@@ -15,16 +15,14 @@
     "@reduxjs/toolkit": "^2.2.5",
     "expo": "^51.0.8",
     "expo-av": "~14.0.5",
-    "expo-bluetooth": "^0.0.0",
+
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    
     "react-native-google-fonts": "^0.0.0",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-track-player": "^4.1.1",
-    "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "react-native-linear-gradient": "^2.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
